# usdpaa-apps

./: COPYING  Makefile  Makefile.am  Makefile.sub.example  README.BuildSystem  README.MakefileTemplate  standalone-env
include/: atb_clock.h  bigatomic.h  ppac.h
lib/: Makefile.am
lib/common/: Makefile.am  refcount.h
lib/crypto/: Makefile.am  common.h  qman.c  qman.h  sec.h  test_utils.c  test_utils.h  thread_priv.c  thread_priv.h
lib/ethernet/: eth.c
lib/hash_table/: Makefile.am  fman_crc64_hash_func.h
lib/ip/: ip.h  ip_common.h  ip_forward.c  ip_forward.h  ip_local.c  ip_rc.c  ip_rc.h
lib/net/: annotations.h  ll_cache.h  neigh.c  rt.h
lib/syscfg/: Makefile.am
src/: Makefile.am
src/capwap/: Makefile.am
src/ceetm_demo/: Makefile.am  ceetm_cfg_parser.c  ceetm_cfg_parser.h
src/classifier_demo/: Makefile.am  ceetm_api.c  ceetm_api.h  classifier_demo_config-b4420.xml  classifier_demo_config-b4860.xml  classifier_demo_config-ls1043a.xml  classifier_demo_config-p2041.xml  classifier_demo_config-p4080.xml  classifier_demo_config-t2080.xml  classifier_demo_config-t4240.xml  classifier_demo_policy.xml  dpa_classif_demo.c  dpa_classif_demo.h
src/cpu_hotplug/: Makefile.am  usdpaa_hotplugd.c
src/dma_test/: Makefile.am  dma_test.c  raw_test.c
src/dpa_offload/: Makefile.am  app_common.h  app_sizing.h  cli_cmd.c  cli_cmd.h  dpa_offload.c  dpa_offload_config_b4860.xml  dpa_offload_pcd_b4.xml  dpa_offload_policy.xml  dpa_offload_swp.xml  nf_init.c  nf_init.h  nl_events.c  nl_events.h  pfkey_utils.c  pfkey_utils.h  xfrm_events.c  xfrm_events.h
src/dsp_dpa/: Makefile.am  main.c
src/fragmentation_demo/: Makefile.am  fragmentation_demo.c  fragmentation_demo_config-b4420.xml  fragmentation_demo_config-b4860.xml  fragmentation_demo_config-ls1043a.xml  fragmentation_demo_config-p2041.xml  fragmentation_demo_config-p4080.xml  fragmentation_demo_config-t2080.xml  fragmentation_demo_config-t4240.xml
src/hello_reflector/: Makefile.am  hello_reflector.c
src/ipsec_offload/: Makefile.am  app_common.h  app_config.h  ipsec_init.c  ipsec_offload.c  ipsec_offload_config_b4420.xml  ipsec_offload_config_b4860.xml  ipsec_offload_config_b4860_1p.xml  ipsec_offload_config_p2041.xml  ipsec_offload_config_p2041_1p.xml  ipsec_offload_config_p4080.xml  ipsec_offload_config_p4080_1p.xml  ipsec_offload_config_p4080_1p_fman0_instance.xml  ipsec_offload_config_p4080_1p_fman1_instance.xml  ipsec_offload_config_t2080.xml  ipsec_offload_config_t2080_1p.xml  ipsec_offload_config_t4240.xml  ipsec_offload_config_t4240_1p.xml  ipsec_offload_config_t4240_1p_fman0_instance.xml  ipsec_offload_config_t4240_1p_fman1_instance.xml  (+19 more)
(+253 files in other folders)
